# OpenUWOC-AI

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  README_GR.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: coastal_ook_baseline.yaml  synthetic_dataset_baseline.yaml  turbid_pointing_stress.yaml
configs/experiments/: ook_snr_sweep.yaml
docs/: AI_RECEIVER.md  BASELINE_CHANNEL_VALIDATION.md  DIGITAL_TWIN.md  EVALUATION_PROTOCOL.md  EXPERIMENTS.md  MATHEMATICAL_FORMULATION.md  MODULATION.md  REPRODUCIBILITY.md  RESEARCH_OVERVIEW.md  ROADMAP.md  SYNTHETIC_DATASETS.md  SYSTEM_ARCHITECTURE.md  UWOC_CHANNEL_MODEL.md  ai_baselines.md  architecture.md  dataset_generation.md  roadmap.md
docs/reports/: ENGINEERING_REPORT.md  REPRODUCIBILITY_REPORT.md  SCIENTIFIC_REPORT.md
examples/: basic_link_budget.py  generate_dataset.py  train_channel_predictor.py
experiments/configs/: coastal_dataset.json
openuwoc_ai/: __init__.py
openuwoc_ai/channel/: __init__.py  models.py  noise.py  pointing.py
openuwoc_ai/datasets/: __init__.py  synthetic.py
openuwoc_ai/digital_twin/: __init__.py  core.py
openuwoc_ai/evaluation/: __init__.py  metrics.py
openuwoc_ai/ml/: __init__.py  models.py  neural_equalizer.py
openuwoc_ai/modulation/: __init__.py  ook.py
openuwoc_ai/simulation/: __init__.py  link.py  sweeps.py
openuwoc_ai/utils/: __init__.py
openuwoc_ai/visualization/: __init__.py  plots.py
paper/: abstract.md  contributions.md  future_work.md
scripts/: generate_synthetic_dataset.py  make_demo_gif.py  run_experiment.py  run_snr_sweep.py  validate_baseline_channel.py
src/openuwoc_ai/: __init__.py  channels.py  datasets.py  environments.py
src/openuwoc_ai/ai/: __init__.py  channel_prediction.py
tests/: test_channel.py  test_channel_prediction.py  test_datasets.py  test_modulation_metrics_simulation.py  test_synthetic_dataset_and_twin.py
website/: README.md
