[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openuwoc-ai"
version = "0.1.0"
description = "Research framework for AI-assisted Underwater Optical Wireless Communications."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Panagiota Grosdouli"}
]
keywords = [
  "underwater optical wireless communications",
  "UWOC",
  "physical-layer communications",
  "machine learning",
  "signal processing",
  "marine robotics"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering"
]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "pillow>=10.0"
]

[project.optional-dependencies]
ai = [
  "torch>=2.2"
]
dev = [
  "black>=24.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["openuwoc_ai*"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
src = ["openuwoc_ai", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["openuwoc_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
